fix overflow when searching

--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -1,1 +1,3 @@
-$color-white: #f3f4f5;
+$color-grey-general: #f3f4f5;
+$color-grey-line: lightgrey;
+$txt-font-main:'Roboto', sans-serif;
